style.css
:root {
  --color-brand-primary: #9ba9db;
  --color-brand-primary-extra-dark: #1f314b;
  --color-brand-primary-dark: #34428b;
  --color-brand-primary-medium: #6f78ab;
  --color-brand-primary-light: #9ba9db;
  --color-brand-secondary-dark: #2f372e;
  --color-brand-secondary-medium: #637b61;
  --color-brand-secondary-light: #8b9d8a;
  --color-gray-light: #d6d6d6;
}

* {
  font-family: "Afacad", sans-serif;
  font-optical-sizing: auto;
  font-weight: 600;
  font-style: normal;
}

/* Elements section starts here */

body {
  width: 390px;
  height: 100vh;
  margin: auto;
  padding: auto;
  box-sizing: border-box;
  /* background-color: var(--color-brand-tertiary); */
}

button {
  width: 64px;
  border-radius: 8px;
  border: 0px;
  font-size: 16px;
  padding: 4px 7px;
  filter: drop-shadow(2px 4px 1px lightgray);
}

img {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

main {
  width: 390px;
  background-color: white;
}

input {
  border-radius: 5px;
  border: 1px solid var(--color-brand-primary-light);
  font-size: 13px;
  padding: 2px;
  filter: drop-shadow(2px 4px 1px lightgray);
}

h1 {
  margin: 0.4em;
}
/* Elements section ends here */

/* Login/Register page starts here */

.login-input {
  margin: 10px 0px;
}

#index-main {
  background-color: var(--color-brand-primary-light);
  height: 100vh;
}

.container {
  /* border: 1px solid rgb(59, 14, 132); */
  width: 390px;
  margin: auto;
  padding: auto;
  border-radius: 5px;
  /* border: 1px solid #ccc; */
}

.signInContainer {
  padding: 30px;
  margin: 0.9em;
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: start;
  background-color: white;
  border-radius: 5px;
  filter: drop-shadow(2px 4px 4px var(--color-brand-primary-medium));
  font-size: 14px;
  color: var(--color-brand-primary-extra-dark);
}

#buttonContainer {
  display: flex;
  align-items: start;
  gap: 10px;
  padding: 20px 0px 10px 0px;
}

#registerBtn {
  background-color: var(--color-brand-secondary-light);
  color: white;
  display: inline;
}

#loginBtn {
  background-color: var(--color-brand-primary-extra-dark);
  color: white;
  display: inline;
}
/* .registerContainer {
  background-color: bisque;
  padding: 10px;
  margin: 0.5em;
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: start;
} */

/* Login/Register page starts here */

#todosTopHeader {
  background-color: var(--color-brand-primary-dark);
  width: 390px;
  box-sizing: border-box;
}

#habitsTopHeader {
  background-color: var(--color-brand-secondary-dark);
  width: 390px;
  box-sizing: border-box;
}

.top-header {
  width: 390px;
  height: 24px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1em;
  position: fixed;
  top: 0px;
  z-index: 2;
}

.fa-user,
.fa-arrow-right-from-bracket,
.fa-cloud {
  color: white;
}

#quoteContainer {
  display: flex;
  flex-direction: column;
  text-align: center;
  border-radius: 5px;
  overflow: hidden;
  transition: opacity is ease;
  max-height: fit-content;
  margin: 1.5em;
  margin-bottom: 0.5rem;
}
#quote {
  margin-bottom: 0;
}
#author {
  font-size: 0.8em;
  font-style: italic;
}

.fade-quote {
  opacity: 80%;
}

#todosTab {
  background-color: var(--color-brand-primary);
}
#habitTab {
  background-color: var(--color-brand-tertiary);
}

#todosContainer-title {
  padding: 20px;
}

/* The Modal (background) */
.modal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  padding-top: 100px; /* Location of the box */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0, 0, 0); /* Fallback color */
  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
}

/* Modal Content */
.modal-content {
  background-color: #fefefe;
  margin: auto;
  padding: 20px;
  border: 1px solid #888;
  width: 50%;
}

/* The Close Button */
.close {
  color: #aaaaaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: #000;
  text-decoration: none;
  cursor: pointer;
}

nav {
  background-color: #f2f2f2;
  padding: 10px;
  text-align: center;
  border-radius: 5px;
  margin-top: 40px;
}

nav a {
  border: 1px solid #ccc;
  border-bottom: none;
  padding: 10px 10px;
  text-decoration: none;
  color: black;
}

nav a:hover {
  background-color: #e7e7e7;
}

/* .filterAndSort {
  border: 0.01px solid #ccc;
  width: 100%;
  height: 100px;
  border-radius: 5px;
  display: flex;
  flex-direction: row;
}

.sortContainer {
  display: flex;
  flex-direction: column;
  margin-top: 0.5rem;
  width: 100%;
}

#deadlineContainer,
#estimatedTimeContainer,
#priorityFilterContainer,
#prioritySortContainer,
#prioritySortInputContainer,
#streakSortContainer {
  display: flex;
  background: #f4f5f4;
  margin: 0.2rem;
  justify-content: space-between;
}
*/

#estimatedTimeSortDropdown,
#deadlineSortDropdown {
  border-radius: 5px;
  border: 1px solid var(--color-brand-primary-light);
  font-size: 13px;
  padding: 2px;
}

.toDoItems,
.hibitsItems {
  border: 0.1px solid #ccc;
  width: 100%;
  height: 400px;
}

/* Sharlins del */

#todosContainer {
  border-radius: 10px;
  margin: 0.5em;
  padding: 0.5em;
  background-color: rgb(238, 238, 238);
}

#completedTodosContainer {
  border-radius: 10px;
  margin: 0.5em;
  padding: 0.5em;
  background-color: var(--color-brand-secondary-light);
}

.todo-card-cover-container {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  width: 80%;
  margin: 1em;
}

.habit-card-cover-container {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  width: 80%;
  margin: 1em;
}

.todo-card {
  border-radius: 10px;
  padding-right: 1em;
  margin: 0.5em;
  display: flex;
  align-items: center;
  justify-content: space-around;
  gap: 1em;
}

.todo-info {
  border-radius: 0px 0px 8px 8px;
  background-color: var(--color-brand-primary);
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 0.5em 1em;
}

.completed-todo-info {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  background-color: var(--color-gray-light);
  width: 100%;
  padding: 0.5em 1em;
}

.todo-details {
  border-radius: 20px;
  display: flex;
  margin: 0.5em;
  width: 100%;
  justify-content: space-between;
  font-size: 0.8rem;
  color: white;
}

.todo-title-info {
  display: flex;
  justify-content: space-between;
}

.todo-btn {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.edit-btn,
.delete-btn {
  border: none;
  border-radius: 5px;
  margin: 0.5em;
  padding: 0px;
  background-color: rgba(0, 0, 0, 0.1);
}

.todo-category-cover,
.habit-priority-high-cover,
.habit-priority-medium-cover,
.habit-priority-low-cover,
.habit-priority-none-cover {
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
  padding: 10px 20px;
  overflow: hidden;
  height: 20%;
  align-items: center;
  font-size: 12px;
}

.todo-category-cover {
  background-color: var(--color-brand-primary-extra-dark);
  color: white;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 10px;
}

#habitContainer {
  background: #637b61;
  display: flex;
  flex-direction: column;
}

.habit-priority-high-cover {
  background: rgb(255, 0, 0);
}

.habit-priority-medium-cover {
  background: darkorange;
}

.habit-priority-low-cover {
  background: rgba(3, 191, 19, 0.978);
}

.habit-priority-none-cover {
  background-color: var(--color-brand-tertiary);
}

.habit-details {
  background: white;
  display: flex;
  flex-direction: row-reverse;
}

.habit-details p {
  font-size: 1.2em;
  font-weight: 600;
  border-radius: 50%;
  padding: 0.5em;
  background: rgb(241, 235, 235);
}

.habit-info {
  border-radius: 0px 0px 8px 8px;
  background-color: var(--color-brand-tertiary);
  padding: 1em;
  margin: 1em;
  margin-top: 0;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  width: 80%;
}

/*Streak element*/
.streak-element {
  display: flex;
  flex-direction: column-reverse;
  align-items: end;
}

#showStreak {
  display: flex;
  flex-direction: row;
  border: 1px solid gray;
}

#addNewStreak {
  border: 1px solid black;
}

/* Arrows to display Completed todos or not*/

.completed-todos-heading {
  display: flex;
  align-items: center;
}

#arrowRight {
  margin: 10px;
}

#arrowDown {
  margin: 10px;
}

.hide-element {
  display: none;
}

/* End of Arrows to display Completed todos or not*/

/*************POMODORO MODAL******************/

/* The Modal (background) */
.pomodoro-modal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  /*padding-top: 100px; /* Location of the box */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(255, 255, 255); /* Fallback color */
  background-color: rgba(255, 255, 255, 0.371); /* Black w/ opacity */
}

/* Modal Content */
.pomodoro-modal-content {
  background-color: #fefefe6c;
  margin: auto;
  padding: 20px;
  border: 1px solid #c72020;
  width: 60%;
  height: 60%;
}

/* The Close Button */
.pomodoro-close {
  color: #700707;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.pomodoro-close:hover,
.pomodoro-close:focus {
  color: #000;
  text-decoration: none;
  cursor: pointer;
}

.pomodoro-modal-details {
  border: 1px solid black;
  display: flex;
  justify-content: center;
  flex-direction: column;
  text-align: center;
}
#timerTime {
  font-size: 100px;
  width: 200px;
}
.timer-display {
  font-size: 100px;
}
.timer-buttons {
  border: 1px solid rgb(20, 58, 134);
}
/* .timer-stop,
.timer-pause,
.timer-start {
} */

/******************POMODORO MODAL ENDS******************/

#footer {
  width: 390px;
  height: 82px;
  box-sizing: border-box;
  position: fixed;
  bottom: 0px;
  z-index: 2;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
}

.habit-footer {
  background-color: var(--color-brand-secondary-dark);
}

.todo-footer {
  background-color: var(--color-brand-primary-dark);
}

.fa-circle-plus,
.fa-calendar,
.fa-stopwatch {
  color: var(--color-brand-primary-medium);
}

/*FIELDSET*/

.categoryContainer {
  margin: 5px 15px;
  border: 1px solid #6f78ab;
  border-radius: 5px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  padding: 5px;
}

.filter-sort-title {
  font-size: 12px;
  background-color: #6f78ab;
  padding: 3px;
  border-radius: 5px;
  color: white;
  /* border: 1px solid blue; */
}
.category-div {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  text-align: center;
  gap: 3px;
  /* border: 1px solid red; */
}

.category-item {
  text-align: center;
  /* border: 1px solid rgb(194, 14, 200); */
}

label {
  font-size: 12x;
}

.sortContainer {
  border: 1px solid #6f78ab;
  border-radius: 5px;
  margin: 2px 15px;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  height: 35px;
}

/* Todos-completed container*/

.todos-completed-container,
.habit-container {
  border: 0.1px solid lightgray; /*just to check it */
  border-radius: 5px;
  margin: 10px 15px;
}

.filterSortMainContainer {
  display: flex;

  margin: 5px 15px;
  justify-content: space-around;
  align-items: center;
}
/*Habit-sida*/

.filterSortContainerHabit {
  border: 1px solid #090c7a;
  border-radius: 5px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;
}

